--- a/templates/admin/project/edit.html.twig
+++ b/templates/admin/project/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('admin/project/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_project_index') }}">back to list</a>
+    <a href="{{ path('app_admin_project_index') }}">back to list</a>
 
     {{ include('admin/project/_delete_form.html.twig') }}
 {% endblock %}
