--- a/templates/admin/project/index.html.twig
+++ b/templates/admin/project/index.html.twig
@@ -29,8 +29,8 @@
                 <td>{{ project.checkpointDate ? project.checkpointDate|date('Y-m-d') : '' }}</td>
                 <td>{{ project.deliveryDate ? project.deliveryDate|date('Y-m-d') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_project_show', {'id': project.id}) }}">show</a>
-                    <a href="{{ path('app_project_edit', {'id': project.id}) }}">edit</a>
+                    <a href="{{ path('app_admin_project_show', {'id': project.id}) }}">show</a>
+                    <a href="{{ path('app_admin_project_edit', {'id': project.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -41,5 +41,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_project_new') }}">Create new</a>
+    <a href="{{ path('app_admin_project_new') }}">Create new</a>
 {% endblock %}
