--- a/templates/admin/project/new.html.twig
+++ b/templates/admin/project/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('admin/project/_form.html.twig') }}
 
-    <a href="{{ path('app_project_index') }}">back to list</a>
+    <a href="{{ path('app_admin_project_index') }}">back to list</a>
 {% endblock %}
