--- a/templates/admin/project/show.html.twig
+++ b/templates/admin/project/show.html.twig
@@ -38,9 +38,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_project_index') }}">back to list</a>
+    <a href="{{ path('app_admin_project_index') }}">back to list</a>
 
-    <a href="{{ path('app_project_edit', {'id': project.id}) }}">edit</a>
+    <a href="{{ path('app_admin_project_edit', {'id': project.id}) }}">edit</a>
 
     {{ include('admin/project/_delete_form.html.twig') }}
 {% endblock %}
